--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,4 +1,5 @@
 # i3blocks config file
+# 
 #
 # Please see man i3blocks for a complete reference!
 # The man page is also hosted at http://vivien.github.io/i3blocks
@@ -99,6 +100,7 @@ interval=30
 # If the instance is not specified, use the interface used for default route.
 # The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
 # [iface]
+# full_text=ellosefjl
 # instance=wlan0
 # color=#00FF00
 # interval=10
@@ -112,21 +114,27 @@ interval=30
 #[load_average]
 #interval=10
 
+# Date Time
+#
+[date]
+command=date '+%Y-%m-%d'
+interval=60
+
+[time]
+command=date '+%H:%M'
+interval=60
+
 # Battery indicator
 #
 # The battery instance defaults to 0.
 [battery]
-label=BAT
-label=⚡
+#label=BAT
+#label=⚡
 instance=1
-command=~/.scripts/i3/power.sh
-interval=30
+command=echo "$(~/.scripts/i3/power.sh)  "
+interval=1
+markup=pango
 
-# Date Time
-#
-[time]
-command=date '+%Y-%m-%d %H:%M:%S'
-interval=5
 
 # Generic media player support
 #
@@ -165,3 +173,5 @@ interval=5
 #instance=NUM
 #interval=once
 #signal=11
+
+[click]
