--- a/.config/i3/config
+++ b/.config/i3/config
@@ -49,7 +49,7 @@ floating_modifier $mod
 bindsym $mod+Return exec kitty
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
@@ -178,7 +178,7 @@ bindsym $mod+r mode "resize"
 # gaps
 for_window [class="^.*"] border pixel 2 
 gaps inner 8 
-gaps outer 4
+gaps outer 2
 
 # colors
 set $bg-color 	         #2f343f
@@ -221,6 +221,10 @@ bar {
 }
 
 
+# brightness
+bindsym XF86MonBrightnessUp exec brightnessctl set +10% # increase screen brightness
+
+bindsym XF86MonBrightnessDown exec brightnessctl set 10%- # decrease screen brightness
 
 #new_window 1pixel
 
@@ -233,8 +237,8 @@ exec_always feh --bg-scale ~/Pictures/space.jpg
 exec_always compton -f -D 1
 
 # Tray Icons!
-exec_always volumeicon
-exec_always nm-applet
+exec volumeicon
+exec nm-applet
 
 # ========================= LAUNCH PROGRAMS ==========================
 bindsym $mod+ae exec config
