--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -114,27 +114,29 @@ interval=30
 #[load_average]
 #interval=10
 
-# Date Time
-#
-[date]
-command=date '+%Y-%m-%d'
-interval=60
 
+
+# Battery indicator
+#
 [time]
 command=date '+%H:%M'
 interval=60
 
-# Battery indicator
+
+# Date Time
 #
+[date]
+command=date '+%d/%m - %Y'
+interval=60
+
 # The battery instance defaults to 0.
 [battery]
 #label=BAT
 #label=⚡
 instance=1
-command=echo "$(~/.scripts/i3/power.sh)  "
+command=echo "$(~/.scripts/i3/power.sh)"
 interval=1
 markup=pango
-
 
 # Generic media player support
 #
