added wifi polybar-reload open_dir and more scripts

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -260,4 +260,6 @@ exec_always notify-send "$(gym) dage tilbage af gym!"
 
 bindsym $mod+c exec config
 bindsym $mod+w exec connect
+bindsym $mod+b exec reload_bar
+bindsym $mod+e exec open_dir
 
