--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ font-1 = FontAwesome;2
 
 modules-left = xworkspaces xwindow
 modules-center = time 
-modules-right = cpu pulseaudio wlan battery date
+modules-right = gym cpu pulseaudio wlan battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -139,6 +139,12 @@ interval = 2
 format-prefix = " "
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
+
+[module/gym]
+type = custom/script
+exec = gym
+interval = 1000
+label = "%output% dage tilbage!"
 
 [network-base]
 type = internal/network
