dotfiles in polybar

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ font-1 = FontAwesome;2
 
 modules-left = xworkspaces xwindow
 modules-center = time 
-modules-right = gym cpu pulseaudio wlan battery date
+modules-right = gym dot cpu pulseaudio wlan battery date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -136,7 +136,7 @@ label = %percentage_used:2%%
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
+format-prefix = ""
 format-prefix-foreground = ${colors.primary}
 label = %percentage:2%%
 
@@ -151,7 +151,7 @@ type = internal/network
 interval = 5
 format-connected = <label-connected>
 format-disconnected = <label-disconnected>
-label-disconnected = %{F#F0C674}%ifname%%{F#707880} disconnected
+label-disconnected = %{F#98971a} %{F#707880} disconnected
 
 [module/wlan]
 inherit = network-base
@@ -164,6 +164,15 @@ label-connected = %{F#98971a} %{F-}%essid%
 inherit = network-base
 interface-type = wired
 label-connected = %{F#F0C674}%ifname%%{F-} %local_ip%
+
+[module/dot]
+type = custom/script
+exec = dotgit status -s | wc -l
+interval = 5
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
+label = "%output%"
+
 
 [module/date]
 type = internal/date
