--- a/.config/i3/config
+++ b/.config/i3/config
@@ -146,8 +146,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
-# exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exec "i3-msg exit"
+
 #bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
 # resize window (you can also use the mouse for that)
@@ -257,9 +256,11 @@ exec_always autoscripts
 exec_always notify-send "$(gym) dage tilbage af gym!"
 
 # ========================= LAUNCH PROGRAMS ==========================
+#bindsym $mod+Shift+e exec "i3-msg exit"
 
 bindsym $mod+c exec config
 bindsym $mod+w exec connect
 bindsym $mod+b exec reload_bar
 bindsym $mod+e exec open_dir
+bindsym $mod+Shift+e exec powerdown
 
