--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -17,7 +17,7 @@
 ;==========================================================
 
 [colors]
-background = #70282828
+background = #c0000000
 background-alt = #90404040
 foreground = #ebdbb2
 primary = #98971a
@@ -60,7 +60,7 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-;tray-position = right
+tray-position = right
 
 ; wm-restack = generic
 ; wm-restack = bspwm
@@ -223,7 +223,7 @@ adapter = AC0
 ; Disable polling by setting the interval to 0.
 ;
 ; Default: 5
-poll-interval = 2
+poll-interval = 10
 
 ; see "man date" for details on how to format the time string
 ; NOTE: if you want to use syntax tags here you need to use %%{...}
