--- a/.config/i3/config
+++ b/.config/i3/config
@@ -18,7 +18,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar block below.
-font pango:Source Code Pro 9
+font pango:System San Francisco
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -38,10 +38,10 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% #&& $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% #&& $refresh_i3status
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle #&& $refresh_i3status
+bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle #&& $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -147,43 +147,19 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 
-#bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym ae resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
+bindsym $mod+Ctrl+$left resize shrink width 10 px or 10 ppt
+bindsym $mod+Ctrl+$up resize grow height 10 px or 10 ppt
+bindsym $mod+Ctrl+$down resize shrink height 10 px or 10 ppt
+bindsym $mod+Ctrl+$right resize grow width 10 px or 10 ppt
 
 # gaps
-for_window [class="^.*"] border pixel 1 
-gaps inner 8 
+for_window [class="^.*"] border pixel 1
+gaps inner 8
 gaps outer 2
 
 # colors
 set $fucused-color       #98971a
-set $bg-color 	         #282828
+set $bg-color            #282828
 set $text-color          #ebdbb2
 set $inactive-bg-color   #282828
 set $inactive-text-color #676E7D
@@ -204,32 +180,7 @@ hide_edge_borders both
 # finds out, if available)
 
 # Polybar
-exec_always polybar
-
-#bar {
-        #status_command i3blocks -c ~/.config/i3/i3blocks.conf
-        ##status_command i3status
-#
-	#workspace_buttons yes
-	#tray_output primary
-#
-	##tray_padding 100
-#
-	#font pango:System San Francisco 10
-	#position top
-	#colors {
-#
-        #statusline $text-color
-#
-		#background $bg-color
-	   	#separator #757575
-		##                  border             background         text
-		#focused_workspace  $bg-color          $bg-color          $text-color
-		#inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		#urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
-	#}
-#}
-
+exec_always --no-startup-id polybar
 
 # brightness
 bindsym XF86MonBrightnessUp exec brightnessctl set +10% # increase screen brightness
@@ -241,26 +192,23 @@ bindsym XF86MonBrightnessDown exec brightnessctl set 10%- # decrease screen brig
 
 
 # Wallpaper
-exec_always feh --bg-scale ~/Pictures/space.jpg
+exec_always --no-startup-id feh --bg-scale ~/Pictures/space.jpg
 
 # Compositor : for transparancy
-exec_always compton -f -D 1
+exec_always --no-startup-id compton -f -D 1
 
 # notifications
-exec_always dunst
-
-# Autoscripts
-exec_always autoscripts
+exec_always --no-startup-id dunst
 
 # gym
-exec_always notify-send "$(gym) dage tilbage af gym!"
+exec_always --no-startup-id notify-send "$(gym) dage tilbage af gym!"
 
 # ========================= LAUNCH PROGRAMS ==========================
 #bindsym $mod+Shift+e exec "i3-msg exit"
 
-bindsym $mod+c exec config
-bindsym $mod+w exec connect
-bindsym $mod+b exec reload_bar
-bindsym $mod+e exec open_dir
-bindsym $mod+Shift+e exec powerdown
+bindsym $mod+c exec --no-startup-id config
+bindsym $mod+w exec --no-startup-id connect
+bindsym $mod+b exec --no-startup-id reload_bar
+bindsym $mod+e exec --no-startup-id open_dir
+bindsym $mod+Shift+e exec --no-startup-id powerdown
 
