--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ font-1 = FontAwesome;2
 
 modules-left = xworkspaces xwindow
 ;modules-center = time 
-modules-right = gym dot cpu pulseaudio wlan battery time date
+modules-right = gym dot cpu pulseaudio battery wlan time date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -144,7 +144,7 @@ label = %percentage:2%%
 type = custom/script
 exec = gym
 interval = 1000
-label = "%output% dage tilbage!"
+label = "%output%"
 
 [network-base]
 type = internal/network
