--- a/.config/i3/config
+++ b/.config/i3/config
@@ -203,6 +203,10 @@ exec_always --no-startup-id dunst
 # gym
 exec_always --no-startup-id notify-send "$(gym) dage tilbage af gym!"
 
+# hurtig key-repeat
+exec_always --no-startup-id xset r rate 220 50
+
+
 # ========================= LAUNCH PROGRAMS ==========================
 #bindsym $mod+Shift+e exec "i3-msg exit"
 
