--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -53,7 +53,7 @@ font-1 = FontAwesome;2
 
 modules-left = xworkspaces xwindow
 ;modules-center = time 
-modules-right = gym dot cpu pulseaudio battery wlan time date
+modules-right = dot cpu pulseaudio battery wlan time date
 
 cursor-click = pointer
 cursor-scroll = ns-resize
