--- a/.config/i3/config
+++ b/.config/i3/config
@@ -213,3 +213,4 @@ bindsym $mod+b exec --no-startup-id reload_bar
 bindsym $mod+e exec --no-startup-id open_dir
 bindsym $mod+Shift+e exec --no-startup-id powerdown
 bindsym XF86PowerOff exec --no-startup-id powerdown
+bindsym $mod+å exec --no-startup-id firefox
