--- a/.config/i3/config
+++ b/.config/i3/config
@@ -214,3 +214,4 @@ bindsym $mod+e exec --no-startup-id open_dir
 bindsym $mod+Shift+e exec --no-startup-id powerdown
 bindsym XF86PowerOff exec --no-startup-id powerdown
 bindsym $mod+b exec --no-startup-id firefox
+bindsym $mod+Shift+f exec --no-startup-id firefox https://www.y8.com/games/fish_eat_fish_3_players
