--- a/.config/i3/config
+++ b/.config/i3/config
@@ -38,7 +38,7 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% #&& $refresh_i3status
+bindsym XF86AudioRaiseVolume  exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% #&& $refresh_i3status
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% #&& $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle #&& $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle #&& $refresh_i3status
@@ -183,8 +183,8 @@ hide_edge_borders both
 exec_always --no-startup-id polybar
 
 # brightness
-bindsym XF86MonBrightnessUp exec brightnessctl set +10% # increase screen brightness
-bindsym XF86MonBrightnessDown exec brightnessctl set 10%- # decrease screen brightness
+bindsym XF86MonBrightnessUp exec --no-startup-id  brightnessctl set +10% # increase screen brightness
+bindsym XF86MonBrightnessDown exec --no-startup-id  brightnessctl set 10%- # decrease screen brightness
 
 #new_window 1pixel
 
