--- a/.config/i3/config
+++ b/.config/i3/config
@@ -197,7 +197,7 @@ bindsym Shift+XF86MonBrightnessDown exec --no-startup-id  brightnessctl set 10% 
 exec_always --no-startup-id feh --bg-scale ~/Pictures/space.jpg
 
 # Compositor : for transparancy
-exec_always --no-startup-id compton -f -D 1
+exec_always --no-startup-id picom -f -D 1
 
 # notifications
 exec_always --no-startup-id dunst
@@ -219,3 +219,8 @@ bindsym $mod+Shift+s exec --no-startup-id flameshot gui
 bindsym XF86PowerOff exec --no-startup-id powerdown
 bindsym $mod+b exec --no-startup-id firefox
 bindsym $mod+Shift+f exec --no-startup-id firefox https://www.y8.com/games/fish_eat_fish_3_players
+
+# Moonlander
+bindsym $mod+Ctrl+Shift+p exec --no-startup-id pavucontrol
+bindsym $mod+Ctrl+Shift+w exec --no-startup-id wally
+bindsym $mod+Ctrl+Shift+k exec --no-startup-id xset r rate 220 50 && notify-send "Moonlander" "Set Keyrepeat"
