--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -2,24 +2,25 @@
 # https://htmlpreview.github.io/?https://github.com/conformal/spectrwm/blob/master/spectrwm.html
 # NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
 
-# workspace_limit	= 22
-# focus_mode		= default
-# focus_close		= previous
+# workspace_limit	= 7
+focus_mode		= follow
+focus_close		= previous
 # focus_close_wrap	= 1
 # focus_default		= last
 # spawn_position		= next
-# workspace_clamp	= 1
-# warp_focus		= 1
-# warp_pointer		= 1
+workspace_clamp	= 1
+warp_focus		= 0
+warp_pointer		= 0
 
 # Window Decoration
-border_width		= 1
-color_focus		    = green
+border_width		= 0
+color_focus		= rgb:eb/bc/ba
 # color_focus_maximized	= yellow
 # color_unfocus		= rgb:88/88/88
 # color_unfocus_maximized	= rgb:88/88/00
-# region_padding	= 0
-# tile_gap		= 0
+# region = screen[1]:1920x980+0+50
+region_padding	= 20
+tile_gap		= 10
 
 # Region containment
 # Distance window must be dragged/resized beyond the region edge before it is
@@ -30,22 +31,23 @@ color_focus		    = green
 disable_border		= 1
 
 # Bar Settings
-bar_enabled		    = 0
+bar_enabled		= 1
 # bar_enabled_ws[1]	= 1
 # bar_border_width	= 1
-# bar_border[1]		= rgb:00/80/80
-# bar_border_unfocus[1]	= rgb:00/40/40
-# bar_color[1]		= black
-# bar_color_selected[1]	= rgb:00/80/80
-# bar_font_color[1]	= rgb:a0/a0/a0
-# bar_font_color_selected	= black
-# bar_font		= xos4 Terminus:pixelsize=14:antialias=true
-# bar_font_pua		= Typicons:pixelsize=14:antialias=true
-# bar_action		= baraction.sh
-# bar_action_expand	= 0
-# bar_justify		= left
-# bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
-# workspace_indicator	= listcurrent,listactive,markcurrent,printnames
+# bar_border[1]		= rgb:30/30/46
+# bar_border[1]		= rgb:30/30/46
+# bar_border_unfocus[1]	= rgb:30/30/46
+# bar_color[1]		= rgb:30/30/46
+# bar_color_selected[1]	= rgb:30/30/46
+# bar_font_color[1]	= rgb:e0/de/f4,rgb:eb/bc/ba,rgb:19/17/24,rgb:55/51/69
+# bar_font_color_selected	= rgb:e0/de/f4
+# bar_font		=  System San Francisco:pixelsize=18:antialias=true
+# bar_font_pua = MesloLGL Nerd Font:pixelsize=18:antialias=true
+# bar_action		= ~/baraction.sh
+# bar_action_expand	= 1
+# bar_format		= +I +@fg=3;+D +F+A
+# workspace_indicator	= listcurrent,listactive,listempty,markcurrent,printnames
+
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
@@ -60,7 +62,7 @@ bar_enabled		    = 0
 # urgent_collapse	= 0
 
 # Dialog box size ratio when using TRANSSZ quirk; 0.3 < dialog_ratio <= 1.0
-# dialog_ratio		= 0.6
+dialog_ratio		= 0.6
 
 # Split a non-RandR dual head setup into one region per monitor
 # (non-standard driver-based multihead is not seen by spectrwm)
@@ -68,64 +70,181 @@ bar_enabled		    = 0
 # region		= screen[1]:1280x1024+1280+0
 
 # Launch applications in a workspace of choice
-# autorun		= ws[1]:xterm
-# autorun		= ws[2]:xombrero http://www.openbsd.org
+# Launch applications in a workspace of choice
+
+# apps
+# autorun		= ws[1]:spotify
+# autorun		= ws[3]:steam-native
+# autorun   = ws[4]:discord
+
+# tools
+autorun = ws[1]:picom --config /home/Balder/.config/picom/picom.spectrwm.conf
+autorun = ws[1]:polybar --config /home/Balder/.config/polybar/config.spectrwm.ini
+autorun = ws[1]:nitrogen --restore
+autorun = ws[1]:xset r rate 220 50
 
 # Customize workspace layout at start
-# layout		= ws[1]:4:0:0:0:vertical
-# layout		= ws[2]:0:0:0:0:horizontal
-# layout		= ws[3]:0:0:0:0:fullscreen
-# layout		= ws[4]:4:0:0:0:vertical_flip
-# layout		= ws[5]:0:0:0:0:horizontal_flip
+layout		= ws[1]:0:0:0:0:vertical
+layout		= ws[2]:0:0:0:0:vertical
+layout		= ws[3]:0:0:0:0:vertical
+layout		= ws[4]:0:0:0:0:vertical
+layout		= ws[5]:0:0:0:0:vertical
+layout      = ws[6]:0:0:0:0:vertical
+
+# binds
+#bind[bar_toggle]	= MOD+b
+#bind[bar_toggle_ws]	= MOD+Shift+b
+bind[button2]		= MOD+v
+bind[cycle_layout]	= MOD+space
+bind[flip_layout]	= MOD+Shift+backslash
+bind[float_toggle]	= MOD+s
+#bind[focus_main]	= MOD+m
+# bind[focus_next]	= MOD+j
+# bind[focus_next]	= MOD+Tab
+# bind[focus_prev]	= MOD+k
+# bind[focus_prev]	= MOD+Shift+Tab
+# bind[focus_urgent]	= MOD+u
+# bind[height_grow]	= MOD+Shift+k
+# bind[height_shrink]	= MOD+Shift+j
+#bind[initscr]		= MOD+Shift+i
+# bind[master_add]	= MOD+Shift+comma
+# bind[master_del]	= MOD+Shift+period
+# bind[master_grow]	= MOD+l
+# bind[master_shrink]	= MOD+h
+# bind[maximize_toggle]	= MOD+f
+bind[move_down]		= MOD+j
+bind[move_left]		= MOD+h
+bind[move_right]	= MOD+l
+bind[move_up]		= MOD+k
+bind[mvrg_1]		= MOD+Shift+1
+bind[mvrg_2]		= MOD+Shift+2
+bind[mvrg_3]		= MOD+Shift+3
+bind[mvrg_4]		= MOD+Shift+4
+bind[mvrg_5]		= MOD+Shift+5
+bind[mvrg_6]		= MOD+Shift+6
+bind[mvrg_7]		= MOD+Shift+7
+bind[mvrg_8]		= MOD+Shift+8
+bind[mvrg_9]		= MOD+Shift+9
+# bind[name_workspace]	= MOD+Shift+slash
+bind[quit]		= MOD+Control+q
+# bind[raise_toggle]	= MOD+Control+r
+# bind[restart]		= MOD+Control+r
+# bind[rg_1]		= MOD+KP_End
+# bind[rg_2]		= MOD+KP_Down
+# bind[rg_3]		= MOD+KP_Next
+# bind[rg_4]		= MOD+KP_Left
+# bind[rg_5]		= MOD+KP_Begin
+# bind[rg_6]		= MOD+KP_Right
+# bind[rg_7]		= MOD+KP_Home
+# bind[rg_8]		= MOD+KP_Up
+# bind[rg_9]		= MOD+KP_Prior
+bind[rg_next]		= MOD+period
+bind[rg_prev]		= MOD+comma
+bind[search_win]	= MOD+f
+bind[search_workspace]	= MOD+slash
+bind[stack_dec]		= MOD+Shift+period
+bind[stack_inc]		= MOD+Shift+comma
+bind[stack_reset]	= MOD+Shift+space
+# bind[swap_main]		= MOD+Return
+bind[swap_next]		= MOD+Shift+j
+bind[swap_prev]		= MOD+Shift+k
+bind[uniconify]		= MOD+Shift+w
+bind[version]		= MOD+Shift+v
+bind[width_grow]	= MOD+equal
+bind[width_shrink]	= MOD+minus
+bind[wind_del]		= MOD+q
+bind[wind_kill]		= MOD+c
+bind[ws_1]		= MOD+1
+bind[ws_2]		= MOD+2
+bind[ws_3]		= MOD+3
+bind[ws_4]		= MOD+4
+bind[ws_5]		= MOD+5
+bind[ws_6]		= MOD+6
+bind[ws_next]		= MOD+Shift+Right
+bind[ws_next_all]	= MOD+Up
+bind[ws_next_move]	= MOD+Right
+bind[ws_prev]		= MOD+Shift+Left
+bind[ws_prev_all]	= MOD+Down
+bind[ws_prev_move]	= MOD+Left
+bind[ws_prior]		= MOD+a
+
+#program binds
+program[term] = alacritty
+bind[term] = MOD+Return
+program[dmenu] = dmenu_run -i
+bind[dmenu] = MOD+d
+program[dmenu_programs] = i3-dmenu-desktop -i
+bind[dmenu_programs] = MOD+p
+program[powermenu] = powerdown
+bind[powermenu] = MOD+Shift+e
+program[passmenu] = passmenu
+bind[passmenu] = MOD+Shift+p
+# program[rofi] = rofi -show drun
+# bind[rofi] = MOD+r
+# program[volup] = pactl set set-sink-volume @DEFAULT_SINK@ +1%
+# bind[volup] = XF86AudioRaiseVolume
+# program[voldown] = pactl set-sink-volume @DEFAULT_SINK@ -1%
+# bind[voldown] = XF86AudioLowerVolume
+# program[briup] = doas brillo -A 1
+# bind[briup] = XF86MonBrightnessUp
+# program[bridown] = doas brillo -U 1
+# bind[bridown] = XF86MonBrightnessDown
+# program[playpause]=playerctl --player spotify,ncspot play-pause
+# bind[playpause]=XF86AudioPlay
+# program[nexttrack]=playerctl --player spotify,ncspot next
+# bind[nexttrack]=XF86AudioNext
+# program[prevtrack]=playerctl --player spotify,ncspot previous
+# bind[prevtrack]=XF86AudioPrev
+# program[screenshot_cust]=flameshot gui
+# bind[screenshot_cust]=Print
 
 # Set workspace name at start
-# name			= ws[1]:IRC
-# name			= ws[2]:Email
-# name			= ws[3]:Browse
-# name			= ws[10]:Music
+# name			= ws[1]:Music
+# name			= ws[2]:WWW
+# name			= ws[3]:Games
+# name			= ws[4]:Discord
 
 # Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
-# modkey = Mod1
+modkey = Mod4
 
 # This allows you to include pre-defined key bindings for your keyboard layout.
-# keyboard_mapping = ~/.spectrwm_us.conf
+#keyboard_mapping = ~/.spectrwm_cz.conf
 
 # PROGRAMS
 
 # Validated default programs:
-# program[lock]		= xlock
-# program[term]		= xterm
-# program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
+program[lock]		= betterlockscreen
+program[term]		= kitty
+program[menu]		= rofi -show drun
 # program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 # program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
 
 # To disable validation of the above, free the respective binding(s):
-# bind[]		= MOD+Shift+Delete	# disable lock
-# bind[]		= MOD+Shift+Return	# disable term
-# bind[]		= MOD+p			# disable menu
+bind[]		= MOD+Shift+Delete	# disable lock
+bind[]		= MOD+Shift+Return	# disable term
+bind[]		= MOD+p			# disable menu
 
 # Optional default programs that will only be validated if you override:
-# program[screenshot_all]	= screenshot.sh full	# optional
-# program[screenshot_wind]	= screenshot.sh window	# optional
-# program[initscr]	= initscreen.sh			# optional
+#program[screenshot_all]	= screenshot.sh full	# optional
+#program[screenshot_wind]	= screenshot.sh window	# optional
+#program[initscr]	= initscreen.sh			# optional
 
 # EXAMPLE: Define 'firefox' action and bind to key.
-# program[firefox]	= firefox http://spectrwm.org/
-# bind[firefox]		= MOD+Shift+b
+program[firefox]	= firefox
+bind[firefox]		= MOD+b
 
 # QUIRKS
 # Default quirks, remove with: quirk[class:name] = NONE
-# quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
-# quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
-# quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
-# quirk[OpenOffice.org 3.1:VCLSalFrame]	= FLOAT
-# quirk[Firefox-bin:firefox-bin]		= TRANSSZ
-# quirk[Firefox:Dialog]			= FLOAT
-# quirk[Gimp:gimp]			= FLOAT + ANYWHERE
-# quirk[XTerm:xterm]			= XTERM_FONTADJ
-# quirk[xine:Xine Window]			= FLOAT + ANYWHERE
-# quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
-# quirk[xine:xine Panel]			= FLOAT + ANYWHERE
-# quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
-# quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
-# quirk[pcb:pcb]				= FLOAT
+quirk[Steam]			= FLOAT
+quirk[pavucontrol]	= FLOAT
+quirk[nitrogen]	= FLOAT
+quirk[discord]	= FLOAT
+quirk[lutris]		= FLOAT
+quirk[Firefox:Dialog]			= FLOAT
+quirk[Gimp:gimp]			= FLOAT + ANYWHERE
+quirk[lunarclient]			= FLOAT
+quirk[qbittorrent]			= FLOAT + ANYWHERE
+quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
+quirk[xine:xine Panel]			= FLOAT + ANYWHERE
+quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
+quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT	
