--- a/.config/spectrwm/spectrwm.conf
+++ b/.config/spectrwm/spectrwm.conf
@@ -2,24 +2,23 @@
 # https://htmlpreview.github.io/?https://github.com/conformal/spectrwm/blob/master/spectrwm.html
 # NOTE: all rgb color values in this file are in hex! see XQueryColor for examples
 
-# workspace_limit	= 7
-focus_mode		= follow
+workspace_limit	= 10
+focus_mode		= default
 focus_close		= previous
-# focus_close_wrap	= 1
+focus_close_wrap	= 1
 # focus_default		= last
-# spawn_position		= next
-workspace_clamp	= 1
-warp_focus		= 0
-warp_pointer		= 0
+spawn_position		= next
+# workspace_clamp	= 1
+# warp_focus		= 1
+# warp_pointer		= 1
 
 # Window Decoration
-border_width		= 0
-color_focus		= rgb:eb/bc/ba
+border_width		= 2
+color_focus		    = white
 # color_focus_maximized	= yellow
 # color_unfocus		= rgb:88/88/88
 # color_unfocus_maximized	= rgb:88/88/00
-# region = screen[1]:1920x980+0+50
-region_padding	= 20
+region_padding	= 10
 tile_gap		= 10
 
 # Region containment
@@ -28,26 +27,25 @@ tile_gap		= 10
 # boundary_width 		= 50
 
 # Remove window border when bar is disabled and there is only one window in workspace
-disable_border		= 1
+# disable_border		= 1
 
 # Bar Settings
 bar_enabled		= 1
 # bar_enabled_ws[1]	= 1
-# bar_border_width	= 1
-# bar_border[1]		= rgb:30/30/46
-# bar_border[1]		= rgb:30/30/46
-# bar_border_unfocus[1]	= rgb:30/30/46
-# bar_color[1]		= rgb:30/30/46
-# bar_color_selected[1]	= rgb:30/30/46
-# bar_font_color[1]	= rgb:e0/de/f4,rgb:eb/bc/ba,rgb:19/17/24,rgb:55/51/69
-# bar_font_color_selected	= rgb:e0/de/f4
-# bar_font		=  System San Francisco:pixelsize=18:antialias=true
-# bar_font_pua = MesloLGL Nerd Font:pixelsize=18:antialias=true
-# bar_action		= ~/baraction.sh
-# bar_action_expand	= 1
-# bar_format		= +I +@fg=3;+D +F+A
-# workspace_indicator	= listcurrent,listactive,listempty,markcurrent,printnames
-
+bar_border_width	= 3
+# bar_border[1]		= rgb:00/80/80
+# bar_border_unfocus[1]	= rgb:00/40/40
+# bar_color[1]		= black
+# bar_color_selected[1]	= rgb:00/80/80
+# bar_font_color[1]	= rgb:a0/a0/a0
+# bar_font_color_selected	= black
+# bar_font		= xos4 Terminus:pixelsize=14:antialias=true
+# bar_font_pua		= Typicons:pixelsize=14:antialias=true
+bar_action		= polybar
+# bar_action_expand	= 0
+# bar_justify		= left
+# bar_format		= +N:+I +S <+D>+4<%a %b %d %R %Z %Y+8<+A+4<+V
+# workspace_indicator	= listcurrent,listactive,markcurrent,printnames
 # bar_at_bottom		= 1
 # stack_enabled		= 1
 # clock_enabled		= 1
@@ -70,65 +68,162 @@ dialog_ratio		= 0.6
 # region		= screen[1]:1280x1024+1280+0
 
 # Launch applications in a workspace of choice
-# Launch applications in a workspace of choice
+autorun		= ws[1]:kitty
+# autorun		= ws[2]:xombrero http://www.openbsd.org
 
-# apps
-# autorun		= ws[1]:spotify
-# autorun		= ws[3]:steam-native
-# autorun   = ws[4]:discord
-
-# tools
-autorun = ws[1]:picom --config /home/Balder/.config/picom/picom.spectrwm.conf
-autorun = ws[1]:polybar --config /home/Balder/.config/polybar/config.spectrwm.ini
 autorun = ws[1]:nitrogen --restore
+autorun = ws[1]:picom -f -D 1
+autorun = ws[1]:dunst
 autorun = ws[1]:xset r rate 220 50
 
 # Customize workspace layout at start
-layout		= ws[1]:0:0:0:0:vertical
-layout		= ws[2]:0:0:0:0:vertical
-layout		= ws[3]:0:0:0:0:vertical
-layout		= ws[4]:0:0:0:0:vertical
-layout		= ws[5]:0:0:0:0:vertical
-layout      = ws[6]:0:0:0:0:vertical
+# layout		= ws[1]:4:0:0:0:vertical
+# layout		= ws[2]:0:0:0:0:horizontal
+# layout		= ws[3]:0:0:0:0:fullscreen
+# layout		= ws[4]:4:0:0:0:vertical_flip
+# layout		= ws[5]:0:0:0:0:horizontal_flip
 
-# binds
-#bind[bar_toggle]	= MOD+b
-#bind[bar_toggle_ws]	= MOD+Shift+b
-bind[button2]		= MOD+v
+# Set workspace name at start
+name			= ws[1]:Browser
+# name			= ws[2]:Email
+# name			= ws[3]:Browse
+# name			= ws[10]:Music
+
+# Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
+modkey = Mod4
+
+
+# PROGRAMS
+
+# Validated default programs:
+program[lock]		= i3lock
+program[term]		= kitty
+program[mixer] = pavucontrol
+program[set_key_repeat] = xset r rate 220 50 && notify-send "Moonlander" "Set Keyrepeat"
+
+program[menu]		= dmenu_run $dmenu_bottom -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
+program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
+program[browser] = firefox
+program[dmenu_programs] = i3-dmenu-desktop -i
+program[dmenu] = dmenu_run -i
+
+# Scripts
+program[powermenu] = powerdown
+program[passmenu] = passmenu
+program[wifi] = connect
+program[bmark] = open_dir
+
+# Moonlander
+program[wally] = wally
+program[oryx] = firefox "https://configure.zsa.io/moonlander/layouts/KR0rp/latest/0"
+
+
+
+# This allows you to include pre-defined key bindings for your keyboard layout.
+keyboard_mapping = /home/Balder/.config/spectrwm/keys.conf
+
+
+# program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
+
+# To disable validation of the above, free the respective binding(s):
+# bind[]		= MOD+Shift+Delete	# disable lock
+# bind[]		= MOD+Shift+Return	# disable term
+# bind[]		= MOD+p			# disable menu
+
+# Optional default programs that will only be validated if you override:
+# program[screenshot_all]	= screenshot.sh full	# optional
+# program[screenshot_wind]	= screenshot.sh window	# optional
+# program[initscr]	= initscreen.sh			# optional
+
+# EXAMPLE: Define 'firefox' action and bind to key.
+# program[firefox]	= firefox http://spectrwm.org/
+# bind[firefox]		= MOD+Shift+b
+
+# bind[term] = MOD+Return
+# bind[browser] = MOD+b
+
+# QUIRKS
+# Default quirks, remove with: quirk[class:name] = NONE
+# quirk[MPlayer:xv]			= FLOAT + FULLSCREEN + FOCUSPREV
+# quirk[OpenOffice.org 2.4:VCLSalFrame]	= FLOAT
+# quirk[OpenOffice.org 3.0:VCLSalFrame]	= FLOAT
+# quirk[OpenOffice.org 3.1:VCLSalFrame]	= FLOAT
+# quirk[Firefox-bin:firefox-bin]		= TRANSSZ
+# quirk[Firefox:Dialog]			= FLOAT
+# quirk[Gimp:gimp]			= FLOAT + ANYWHERE
+# quirk[XTerm:xterm]			= XTERM_FONTADJ
+# quirk[xine:Xine Window]			= FLOAT + ANYWHERE
+# quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
+# quirk[xine:xine Panel]			= FLOAT + ANYWHERE
+# quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
+# quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT
+# quirk[pcb:pcb]				= FLOAT
+
+
+# Keybinds
+
+bind[bar_toggle]	= MOD+b
+# bind[bar_toggle_ws]	= MOD+Shift+b
+# bind[button2]		= MOD+v
 bind[cycle_layout]	= MOD+space
-bind[flip_layout]	= MOD+Shift+backslash
-bind[float_toggle]	= MOD+s
-#bind[focus_main]	= MOD+m
-# bind[focus_next]	= MOD+j
+# bind[flip_layout]	= MOD+Shift+backslash
+# bind[float_toggle]	= MOD+t
+# bind[focus_main]	= MOD+m
+bind[focus_next]	= MOD+j
+bind[focus_prev]	= MOD+k
 # bind[focus_next]	= MOD+Tab
-# bind[focus_prev]	= MOD+k
 # bind[focus_prev]	= MOD+Shift+Tab
 # bind[focus_urgent]	= MOD+u
-# bind[height_grow]	= MOD+Shift+k
-# bind[height_shrink]	= MOD+Shift+j
-#bind[initscr]		= MOD+Shift+i
-# bind[master_add]	= MOD+Shift+comma
-# bind[master_del]	= MOD+Shift+period
+# bind[height_grow]	= MOD+Shift+equal
+# bind[height_shrink]	= MOD+Shift+minus
+# bind[iconify]		= MOD+w
+# bind[initscr]		= MOD+Shift+i
+# bind[lock]		= MOD+Shift+Delete
+# bind[master_add]	= MOD+comma
+# bind[master_del]	= MOD+period
 # bind[master_grow]	= MOD+l
 # bind[master_shrink]	= MOD+h
-# bind[maximize_toggle]	= MOD+f
-bind[move_down]		= MOD+j
-bind[move_left]		= MOD+h
-bind[move_right]	= MOD+l
-bind[move_up]		= MOD+k
-bind[mvrg_1]		= MOD+Shift+1
-bind[mvrg_2]		= MOD+Shift+2
-bind[mvrg_3]		= MOD+Shift+3
-bind[mvrg_4]		= MOD+Shift+4
-bind[mvrg_5]		= MOD+Shift+5
-bind[mvrg_6]		= MOD+Shift+6
-bind[mvrg_7]		= MOD+Shift+7
-bind[mvrg_8]		= MOD+Shift+8
-bind[mvrg_9]		= MOD+Shift+9
+# bind[maximize_toggle]	= MOD+e
+# bind[menu]		= MOD+p
+# bind[move_down]		= MOD+Shift+bracketright
+# bind[move_left]		= MOD+bracketleft
+# bind[move_right]	= MOD+bracketright
+# bind[move_up]		= MOD+Shift+bracketleft
+# bind[mvrg_1]		= MOD+Shift+KP_End
+# bind[mvrg_2]		= MOD+Shift+KP_Down
+# bind[mvrg_3]		= MOD+Shift+KP_Next
+# bind[mvrg_4]		= MOD+Shift+KP_Left
+# bind[mvrg_5]		= MOD+Shift+KP_Begin
+# bind[mvrg_6]		= MOD+Shift+KP_Right
+# bind[mvrg_7]		= MOD+Shift+KP_Home
+# bind[mvrg_8]		= MOD+Shift+KP_Up
+# bind[mvrg_9]		= MOD+Shift+KP_Prior
+bind[mvws_1]		= MOD+Shift+1
+bind[mvws_2]		= MOD+Shift+2
+bind[mvws_3]		= MOD+Shift+3
+bind[mvws_4]		= MOD+Shift+4
+bind[mvws_5]		= MOD+Shift+5
+bind[mvws_6]		= MOD+Shift+6
+bind[mvws_7]		= MOD+Shift+7
+bind[mvws_8]		= MOD+Shift+8
+bind[mvws_9]		= MOD+Shift+9
+bind[mvws_10]		= MOD+Shift+0
+# bind[mvws_11]		= MOD+Shift+F1
+# bind[mvws_12]		= MOD+Shift+F2
+# bind[mvws_13]		= MOD+Shift+F3
+# bind[mvws_14]		= MOD+Shift+F4
+# bind[mvws_15]		= MOD+Shift+F5
+# bind[mvws_16]		= MOD+Shift+F6
+# bind[mvws_17]		= MOD+Shift+F7
+# bind[mvws_18]		= MOD+Shift+F8
+# bind[mvws_19]		= MOD+Shift+F9
+# bind[mvws_20]		= MOD+Shift+F10
+# bind[mvws_21]		= MOD+Shift+F11
+# bind[mvws_22]		= MOD+Shift+F12
 # bind[name_workspace]	= MOD+Shift+slash
-bind[quit]		= MOD+Control+q
-# bind[raise_toggle]	= MOD+Control+r
-# bind[restart]		= MOD+Control+r
+# bind[quit]		= MOD+Shift+q
+# bind[raise_toggle]	= MOD+Shift+r
+# bind[restart]		= MOD+q
 # bind[rg_1]		= MOD+KP_End
 # bind[rg_2]		= MOD+KP_Down
 # bind[rg_3]		= MOD+KP_Next
@@ -138,113 +233,39 @@ bind[quit]		= MOD+Control+q
 # bind[rg_7]		= MOD+KP_Home
 # bind[rg_8]		= MOD+KP_Up
 # bind[rg_9]		= MOD+KP_Prior
-bind[rg_next]		= MOD+period
-bind[rg_prev]		= MOD+comma
-bind[search_win]	= MOD+f
-bind[search_workspace]	= MOD+slash
-bind[stack_dec]		= MOD+Shift+period
-bind[stack_inc]		= MOD+Shift+comma
-bind[stack_reset]	= MOD+Shift+space
+# bind[rg_next]		= MOD+Shift+Right
+# bind[rg_prev]		= MOD+Shift+Left
+# bind[screenshot_all]	= MOD+s
+# bind[screenshot_wind]	= MOD+Shift+s
+# bind[search_win]	= MOD+f
+# bind[search_workspace]	= MOD+slash
+# bind[stack_dec]		= MOD+Shift+period
+# bind[stack_inc]		= MOD+Shift+comma
+# bind[stack_reset]	= MOD+Shift+space
 # bind[swap_main]		= MOD+Return
-bind[swap_next]		= MOD+Shift+j
-bind[swap_prev]		= MOD+Shift+k
-bind[uniconify]		= MOD+Shift+w
-bind[version]		= MOD+Shift+v
-bind[width_grow]	= MOD+equal
-bind[width_shrink]	= MOD+minus
-bind[wind_del]		= MOD+q
-bind[wind_kill]		= MOD+c
-bind[ws_1]		= MOD+1
-bind[ws_2]		= MOD+2
-bind[ws_3]		= MOD+3
-bind[ws_4]		= MOD+4
-bind[ws_5]		= MOD+5
-bind[ws_6]		= MOD+6
-bind[ws_next]		= MOD+Shift+Right
-bind[ws_next_all]	= MOD+Up
-bind[ws_next_move]	= MOD+Right
-bind[ws_prev]		= MOD+Shift+Left
-bind[ws_prev_all]	= MOD+Down
-bind[ws_prev_move]	= MOD+Left
-bind[ws_prior]		= MOD+a
-
-#program binds
-program[term] = alacritty
-bind[term] = MOD+Return
-program[dmenu] = dmenu_run -i
-bind[dmenu] = MOD+d
-program[dmenu_programs] = i3-dmenu-desktop -i
-bind[dmenu_programs] = MOD+p
-program[powermenu] = powerdown
-bind[powermenu] = MOD+Shift+e
-program[passmenu] = passmenu
-bind[passmenu] = MOD+Shift+p
-# program[rofi] = rofi -show drun
-# bind[rofi] = MOD+r
-# program[volup] = pactl set set-sink-volume @DEFAULT_SINK@ +1%
-# bind[volup] = XF86AudioRaiseVolume
-# program[voldown] = pactl set-sink-volume @DEFAULT_SINK@ -1%
-# bind[voldown] = XF86AudioLowerVolume
-# program[briup] = doas brillo -A 1
-# bind[briup] = XF86MonBrightnessUp
-# program[bridown] = doas brillo -U 1
-# bind[bridown] = XF86MonBrightnessDown
-# program[playpause]=playerctl --player spotify,ncspot play-pause
-# bind[playpause]=XF86AudioPlay
-# program[nexttrack]=playerctl --player spotify,ncspot next
-# bind[nexttrack]=XF86AudioNext
-# program[prevtrack]=playerctl --player spotify,ncspot previous
-# bind[prevtrack]=XF86AudioPrev
-# program[screenshot_cust]=flameshot gui
-# bind[screenshot_cust]=Print
-
-# Set workspace name at start
-# name			= ws[1]:Music
-# name			= ws[2]:WWW
-# name			= ws[3]:Games
-# name			= ws[4]:Discord
-
-# Mod key, (Windows key is Mod4) (Apple key on OSX is Mod2)
-modkey = Mod4
-
-# This allows you to include pre-defined key bindings for your keyboard layout.
-#keyboard_mapping = ~/.spectrwm_cz.conf
-
-# PROGRAMS
-
-# Validated default programs:
-program[lock]		= betterlockscreen
-program[term]		= kitty
-program[menu]		= rofi -show drun
-# program[search]	= dmenu $dmenu_bottom -i -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
-# program[name_workspace]	= dmenu $dmenu_bottom -p Workspace -fn $bar_font -nb $bar_color -nf $bar_font_color -sb $bar_color_selected -sf $bar_font_color_selected
-
-# To disable validation of the above, free the respective binding(s):
-bind[]		= MOD+Shift+Delete	# disable lock
-bind[]		= MOD+Shift+Return	# disable term
-bind[]		= MOD+p			# disable menu
-
-# Optional default programs that will only be validated if you override:
-#program[screenshot_all]	= screenshot.sh full	# optional
-#program[screenshot_wind]	= screenshot.sh window	# optional
-#program[initscr]	= initscreen.sh			# optional
-
-# EXAMPLE: Define 'firefox' action and bind to key.
-program[firefox]	= firefox
-bind[firefox]		= MOD+b
-
-# QUIRKS
-# Default quirks, remove with: quirk[class:name] = NONE
-quirk[Steam]			= FLOAT
-quirk[pavucontrol]	= FLOAT
-quirk[nitrogen]	= FLOAT
-quirk[discord]	= FLOAT
-quirk[lutris]		= FLOAT
-quirk[Firefox:Dialog]			= FLOAT
-quirk[Gimp:gimp]			= FLOAT + ANYWHERE
-quirk[lunarclient]			= FLOAT
-quirk[qbittorrent]			= FLOAT + ANYWHERE
-quirk[Xitk:Xitk Combo]			= FLOAT + ANYWHERE
-quirk[xine:xine Panel]			= FLOAT + ANYWHERE
-quirk[Xitk:Xine Window]			= FLOAT + ANYWHERE
-quirk[xine:xine Video Fullscreen Window] = FULLSCREEN + FLOAT	
+# bind[swap_next]		= MOD+Shift+j
+# bind[swap_prev]		= MOD+Shift+k
+# bind[term]		= MOD+Shift+Return
+# bind[uniconify]		= MOD+Shift+w
+# bind[version]		= MOD+Shift+v
+# bind[width_grow]	= MOD+equal
+# bind[width_shrink]	= MOD+minus
+# bind[ws_11]		= MOD+F1
+# bind[ws_12]		= MOD+F2
+# bind[ws_13]		= MOD+F3
+# bind[ws_14]		= MOD+F4
+# bind[ws_15]		= MOD+F5
+# bind[ws_16]		= MOD+F6
+# bind[ws_17]		= MOD+F7
+# bind[ws_18]		= MOD+F8
+# bind[ws_19]		= MOD+F9
+# bind[ws_20]		= MOD+F10
+# bind[ws_21]		= MOD+F11
+# bind[ws_22]		= MOD+F12
+# bind[ws_next]		= MOD+Right
+# bind[ws_next_all]	= MOD+Up
+# bind[ws_next_move]	= MOD+Shift+Up
+# bind[ws_prev]		= MOD+Left
+# bind[ws_prev_all]	= MOD+Down
+# bind[ws_prev_move]	= MOD+Shift+Down
+# bind[ws_prior]		= MOD+a
