--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -141,6 +141,10 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+
+# Custom
+wxt nb, has mathematica, X, flag f = mathematica "$@"
+
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
